# NG_2304

./: .dockerignore  .gitignore  README.md  docker-compose.yml  tree
.github/workflows/: api-tests.yml  api.yml  tests.yml
api/: .env.sample  .flake8  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
api/api/: conftest.py  gunicorn_runner.py  logging.py  settings.py  static.py  tkq.py
api/api/db/: base.py  utils.py
api/api/db/dao/: dummy_dao.py  github_tokens_dao.py  session_dao.py  token_code_dao.py  user_dao.py
api/api/db/migrations/: script.py.mako
api/api/db/migrations/versions/: 2023-10-26-11-09_8fd3b8bea215.py  2023-10-26-13-41_4e957af37ccd.py
api/api/db/models/: dummy_model.py  github_tokens_model.py  session_model.py  token_code_model.py  user_model.py
api/api/libs/: jwt_token.py
api/api/libs/middleware/: __init__.py  auth.py
api/api/libs/oauth/: __init__.py  github.py
api/api/tests/: test_dummy.py
api/api/web/: application.py  lifetime.py
api/api/web/api/: router.py
api/api/web/api/auth/: __init__.py  views.py
api/api/web/api/auth/github/: __init__.py  views.py
api/api/web/api/token/: __init__.py  shema.py  views.py
api/api/web/api/users/: __init__.py  shema.py  views.py
api/deploy/: docker-compose.dev.yml  docker-compose.yml
extension/: package.json
extension/src/: extension.ts  static.ts
extension/src/common/: auth.ts  login.ts
web/: .dockerignore  .env.sample  .eslintrc.json  .prettierrc.json  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
web/.husky/: pre-commit
web/components/layouts/main/: index.tsx
web/components/layouts/main/Header/: index.tsx
web/lib/: axios.ts
web/pages/: _app.tsx  _document.tsx  callback.tsx  index.tsx  login.tsx
